--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,15 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-      
+
       <div class="site-title">
         <img src="{{site.logo | relative_url}}" alt="Logo" style="border-radius: 5px"/>
         {% if site.title and site.title != page.title %}
