--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
         {% endif %}
 
         <ul>
-          <li><a href="{{ "/" | relative_url }}">My Posts</a></li>
-          <li><a href="{{ "/links" | relative_url }}">Good Reads</a></li>
+          <li><a href="{{ "/" | relative_url }}">Posts</a></li>
+          <!--<li><a href="{{ "/links" | relative_url }}">Good Reads</a></li>-->
           <li><a href="{{ "/about" | relative_url }}">About</a></li>
         </ul>
       </div>
