--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,67 +4,74 @@
 @import "{{ site.theme }}";
 
 html {
-  overflow-x: auto;
-  overflow-y: scroll;
+    overflow-x: auto;
+    overflow-y: scroll;
 }
 
 .site-title {
-  position: relative;
-  margin-bottom: 20px;
+    position: relative;
+    margin-bottom: 20px;
+}
 
-  img {
-    border: 1px solid;
-    border-color: #808080;
-  }
+.site-title img {
+    border: 1px solid #808080;
+}
 
-  h1 {
+.site-title h1 {
     position: absolute;
     top: -20%;
     left: 50%;
     transform: translate(-50%, 0);
-
-    padding: 3px 30px 5px 30px;
+    padding: 3px 30px 5px;
     font-size: 2vw;
     white-space: nowrap;
-
     border-bottom: 0;
     border-radius: 5px;
     background-color: black;
-
-    a {
-      color: white;
-    }
-  }
-  @media screen and (min-width: 1000px) {
-    h1 {
-      font-size: 24px;
-    }
-  }
-
-  ul {
-    text-align: center;
-    padding: 0px;
-  }
-
-  li {
-    display: inline;
-  }
-
-  li + li:before {
-    content: " | ";
-  }
 }
 
-.posts {
-  ul {
-    list-style-type: none;
-  }
+.site-title h1 a {
+    color: white;
+}
 
-  li {
+@media screen and (min-width: 1000px) {
+    .site-title h1 {
+        font-size: 24px;
+    }
+}
+
+.site-title ul {
+    text-align: center;
+    padding: 0;
+}
+
+.site-title li {
+    display: inline;
+}
+
+.site-title li + li:before {
+    content: " | ";
+}
+
+.posts ul {
+    list-style-type: none;
+}
+
+.posts li {
     margin-bottom: 15px;
-  }
+}
+
+.posts-title {
+    background-color: #eee;
+    border-radius: 5px;
+    padding: 2px 10px;
+}
+
+.posts-excerpt {
+    padding: 5px 10px 1px 10px;
+    margin: 0 0 0 30px;
 }
 
 .post {
-  font-size: 95%;
+    font-size: 95%;
 }
